--- a/templates/clear_logo/template.css
+++ b/templates/clear_logo/template.css
@@ -1308,3 +1308,9 @@ span.hide-tip div.error {
     color: red;
     display: block;
 }
+
+/* Various classes currently used to center content */
+.nosurvey, .thankyou, .pdfexport, .sessionexpired
+{
+  text-align: center;
+}
