--- a/templates/mint_idea/template.css
+++ b/templates/mint_idea/template.css
@@ -1566,3 +1566,9 @@ span.hide-tip div.error {
     color: red;
     display: block;
 }
+
+/* Various classes currently used to center content */
+.nosurvey, .thankyou, .pdfexport, .sessionexpired
+{
+  text-align: center;
+}
